--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,6 @@
   }
 }
 
-.discussion-board {
-  padding-bottom: 2em;
-}
-
 .App-search-form {
   margin: auto;
 }
@@ -132,7 +128,8 @@
 }
 
 .discussion-board {
-  margin-top: 1em;
+  margin-top: 5em;
+  margin-bottom: 2em;
 }
 
 .discussion-card {
@@ -160,6 +157,12 @@
 
 .top-border {
   border-top: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.platform-navbar-fixed {
+  position: fixed;
+  width: 100vw;
+  z-index: 999;
 }
 
 /* SPINNER */
