:shower: comment and clean

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* CSS styles for the application */
+
 .App {
   text-align: center;
 }
@@ -5,12 +7,6 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -26,15 +22,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .App-search-form {
@@ -177,4 +164,21 @@
 
 .discussion-image {
   width: 12em;
+}
+
+.signup {
+ margin-right: 20px;
+}
+
+.signout {
+ margin-top: 5px;
+}
+
+.loggedin {
+ color: white
+}
+
+.closeButton {
+ margin-bottom: 3px;
+ margin-right: 3px;
 }
